--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-router-dom": "^7.3.0",
     "react-select": "^5.10.1",
     "sweetalert2": "^11.17.2",
-    "swiper": "^11.2.5"
+    "swiper": "^11.2.5",
+    "vnpay": "^2.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
