--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
+    "date-fns": "^4.1.0",
     "firebase": "^11.4.0",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.1.0",
@@ -31,6 +32,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "react-select": "^5.10.1",
+    "recharts": "^2.15.3",
     "sweetalert2": "^11.17.2",
     "swiper": "^11.2.5",
     "vnpay": "^2.2.0"
