--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "chart.js": "^4.4.8",
     "date-fns": "^4.1.0",
     "firebase": "^11.4.0",
+    "framer-motion": "^12.12.2",
+    "gsap": "^3.13.0",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.1.0",
     "lodash": "^4.17.21",
@@ -29,6 +31,7 @@
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "react-select": "^5.10.1",
