--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "react-select": "^5.10.1",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
     "sweetalert2": "^11.17.2",
     "swiper": "^11.2.5",
