--- a/package.json
+++ b/package.json
@@ -13,9 +13,17 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.0",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slot": "^1.2.3",
     "@reduxjs/toolkit": "^2.6.1",
+    "@shadcn/ui": "^0.0.4",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "firebase": "^11.4.0",
     "framer-motion": "^12.12.2",
@@ -24,6 +32,7 @@
     "i18next-browser-languagedetector": "^8.1.0",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
+    "lucide-react": "^0.511.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
@@ -39,6 +48,8 @@
     "recharts": "^2.15.3",
     "sweetalert2": "^11.17.2",
     "swiper": "^11.2.5",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "vnpay": "^2.2.0"
   },
   "devDependencies": {
