--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.17.2",
     "swiper": "^11.2.5",
     "tailwind-merge": "^3.3.0",
