--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gsap": "^3.13.0",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.1.0",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.511.0",
