--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@reduxjs/toolkit": "^2.6.1",
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.8.4",
@@ -34,10 +35,13 @@
     "gsap": "^3.13.0",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.1.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.511.0",
+    "pdfmake": "^0.2.20",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.10.1",
@@ -57,7 +61,8 @@
     "swiper": "^11.2.5",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "vnpay": "^2.2.0"
+    "vnpay": "^2.2.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
